Upgrade xUnit Visual Studio runner to latest stable version (v2.3.1) - enable app domains in all testing; `denied` now breaks testing in VS   - VS runner previously ignored this setting; see xunit/xunit#1533 - remove `"shadowCopy":  false` setting too   - with updated xUnit packages, this setting slows testing down significantly

--- a/test/Directory.Build.targets
+++ b/test/Directory.Build.targets
@@ -7,7 +7,6 @@
       <TestAssembly Include="$(TargetPath)"/>
     </ItemGroup>
 
-    <!-- Override AppDomains default (set in xunit.runner.json). Need them with this runner. -->
-    <xunit AppDomains="true" Assemblies="@(TestAssembly)" Condition="$(IsTestProject)"/>
+    <xunit Assemblies="@(TestAssembly)" Condition="$(IsTestProject)"/>
   </Target>
 </Project>
